@@ -3,7 +3,7 @@
 Option A)
 Using Django itself to serve Caronte.
 1. cd to the project folder (where manage.py is located)
-2. python3 manage.py runserver 0.0.0.0:8008 & >> ~/caronte_log.txt
+2. python3 manage.py runserver 0.0.0.0:8008 &
 
 Option B)
 Using Nginx or Apache.
