@@ -12,6 +12,12 @@
 				<input class="form-control" type="password" ng-model="ctx.password" placeholder="password">
 			</div>
 			<div class="row">
+				<input class="form-control" type="password" ng-model="ctx.password2" placeholder="retype password">
+			</div>
+			<div class="row">
+				<input class="form-control" type="password" ng-model="ctx.secret" placeholder="server secret">
+			</div>
+			<div class="row">
 				<button class="form-control" style="background-color: blue; color: white">Register</button>
 			</div>
 			<div class="row">
